--- a/templates/siemonster-project-projectname/0/docker-compose.yml
+++ b/templates/siemonster-project-projectname/0/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 services:
 
   siemonster:
-    build: http://proxy.git-proxy/git@github.com:siemonster/Project.git#${BRANCH_NAME}
+    build: http://proxy.git-proxy/git@github.com:siemonster/dev.git#${BRANCH_NAME}
     environment:
       SITE_DNAME: ${SITE_DNAME}
       SITE_NAME: siemonster
@@ -14,7 +14,7 @@ services:
       io.rancher.container.hostname_override: container_name
 
   msa:
-    build: http://proxy.git-proxy/git@github.com:siemonster/Project.git#${BRANCH_NAME}:containers/msa
+    build: http://proxy.git-proxy/git@github.com:siemonster/dev.git#${BRANCH_NAME}:containers/msa
     environment:
       ADDITIONAL_PREPARE_COMMAND: 'echo ''db.getCollection("_sites").update({_id:"siemonster"}, {$$set: {names:["admin.${SITE_DNAME}","app.${SITE_DNAME}","${SITE_DNAME}"]}})'' | mongo mongo-sites; SITE_NAME=siemonster SITE_DOMAIN=${SITE_DNAME} node update-apps-links.js'
     stdin_open: true
@@ -26,7 +26,7 @@ services:
       io.rancher.sidekicks: msa-volume
 
   msa-volume:
-    build: http://proxy.git-proxy/git@github.com:siemonster/Project.git#${BRANCH_NAME}:containers/msa-volume
+    build: http://proxy.git-proxy/git@github.com:siemonster/dev.git#${BRANCH_NAME}:containers/msa-volume
     stdin_open: true
     volumes:
     - /var/lib/mongodb
@@ -283,7 +283,7 @@ services:
     tty: true
     volumes_from:
     - 411-volume
-    build: http://proxy.git-proxy/git@github.com:siemonster/Project.git#${BRANCH_NAME}:containers/411
+    build: http://proxy.git-proxy/git@github.com:siemonster/dev.git#${BRANCH_NAME}:containers/411
     stdin_open: true
     links:
     - es-client-2:es-client
@@ -298,7 +298,7 @@ services:
     tty: true
     volumes:
     - /data
-    build: http://proxy.git-proxy/git@github.com:siemonster/Project.git#${BRANCH_NAME}:containers/411-volume
+    build: http://proxy.git-proxy/git@github.com:siemonster/dev.git#${BRANCH_NAME}:containers/411-volume
     stdin_open: true
     command: /bin/bash
 
@@ -484,7 +484,7 @@ services:
       io.rancher.scheduler.affinity:host_label: tiamat=1
 
   elasticloader:
-    build: http://proxy.git-proxy/git@github.com:siemonster/Project.git#${BRANCH_NAME}:containers/elasticloader
+    build: http://proxy.git-proxy/git@github.com:siemonster/dev.git#${BRANCH_NAME}:containers/elasticloader
     stdin_open: true
     tty: true
     links:
@@ -543,7 +543,7 @@ services:
       ELASTICSEARCH_URL: http://elasticsearch:9200
     links:
     - es-client-2:elasticsearch
-    build: http://proxy.git-proxy/git@github.com:siemonster/Project.git#${BRANCH_NAME}:containers/kibana
+    build: http://proxy.git-proxy/git@github.com:siemonster/dev.git#${BRANCH_NAME}:containers/kibana
 
   minemeld:
     labels:
@@ -552,7 +552,7 @@ services:
       io.rancher.scheduler.affinity:host_label: capricorn=1
     tty: true
     stdin_open: true
-    build: http://proxy.git-proxy/git@github.com:siemonster/Project.git#${BRANCH_NAME}:containers/minemeld
+    build: http://proxy.git-proxy/git@github.com:siemonster/dev.git#${BRANCH_NAME}:containers/minemeld
 
   ossec:
     labels:
@@ -604,7 +604,7 @@ services:
     volumes:
     - /root/.local/share/data/bconf
     - /opt/skedler
-    build: http://proxy.git-proxy/git@github.com:siemonster/Project.git#${BRANCH_NAME}:containers/reporting-volume
+    build: http://proxy.git-proxy/git@github.com:siemonster/dev.git#${BRANCH_NAME}:containers/reporting-volume
     command: /bin/bash
 
   info:
@@ -696,7 +696,7 @@ services:
     - 514:514
     - 1516:1516/udp
     - 1516:1516
-    build: http://proxy.git-proxy/git@github.com:siemonster/Project.git#${BRANCH_NAME}:containers/syslog-ng
+    build: http://proxy.git-proxy/git@github.com:siemonster/dev.git#${BRANCH_NAME}:containers/syslog-ng
 
   gmailrelay:
     labels:
