--- a/templates/siemonster-project-projectname/0/docker-compose.yml
+++ b/templates/siemonster-project-projectname/0/docker-compose.yml
@@ -662,6 +662,7 @@ services:
     labels:
       io.rancher.container.pull_image: always
       io.rancher.container.hostname_override: container_name
+      io.rancher.sidekicks: logstash-ossec-volume
       io.rancher.scheduler.affinity:host_label: proteus=1
     tty: true
     stdin_open: true
@@ -675,13 +676,26 @@ services:
     - 3528:3528
     volumes:
     - /opt/containers/${SITE_DNAME}/var/log:/var/log
+    volumes_from:
+    - logstash-ossec-volume
     environment:
       - SERVER_CN=${SITE_DNAME}
     links:
-    - es-client-1:elasticsearch
+    - es-client-1:es-client
     - health
     image: ikuturso/logstash:ssl
     command: logstash -f /config-dir
+    
+  logstash-ossec-volume:
+    labels:
+      io.rancher.container.pull_image: always
+      io.rancher.container.hostname_override: container_name
+    tty: true
+    stdin_open: true
+    volumes:
+    - /var/ossec/data
+    image: ikuturso/siemonster-ossec
+    command: /bin/bash
 
   syslog-ng:
     labels:
