--- a/templates/siemonster-project-projectname/0/docker-compose.yml
+++ b/templates/siemonster-project-projectname/0/docker-compose.yml
@@ -558,6 +558,7 @@ services:
     labels:
       io.rancher.container.pull_image: always
       io.rancher.container.hostname_override: container_name
+      io.rancher.scheduler.affinity:host_label: proteus-1
     tty: true
     stdin_open: true
     volumes:
