--- a/templates/siemonster-project-projectname/0/rancher-compose.yml
+++ b/templates/siemonster-project-projectname/0/rancher-compose.yml
@@ -13,6 +13,12 @@
       required: true
       default: master
       type: string
+    - variable: ACCESS_TOKEN
+      description: Specify the access token.
+      label: Access Token
+      required: true
+      default: Enter Token here
+      type: string
     - variable: ELASTICSEARCH_KRAKEN_TIAMAT_HEAP_SIZE
       label: ELASTICSEARCH_KRAKEN_TIAMAT_HEAP_SIZE
       required: true
