--- a/templates/siemonster-project-projectname/0/docker-compose.yml
+++ b/templates/siemonster-project-projectname/0/docker-compose.yml
@@ -717,6 +717,8 @@ services:
       io.rancher.container.pull_image: always
     container_name: zap
     image: owasp/zap2docker-stable
+    tty: true
+    stdin_open: true
     user: zap
     ports:
       - 8090:8090
@@ -725,3 +727,15 @@ services:
       - -daemon
       - -host 0.0.0.0
       - -port 8090
+   
+   event:
+     labels:
+       io.rancher.container.start_once: 'true'
+       io.rancher.container.pull_image: always
+     image: ikuturso/event
+     tty: true
+     stdin_open: true
+     links:
+     - alerta  
+     command: alerta send -r web01 -e NodeUp -E Production -S Website -s major -t "SIEMonster is UP." -v AWESOME
+      
