--- a/templates/siemonster-project-projectname/config.yml
+++ b/templates/siemonster-project-projectname/config.yml
@@ -1,4 +1,4 @@
-name: "SIEMonster App"
+name: "SIEMonster Premium App"
 description: "SIEMonster Security Information and Event Management (SIEM)."
 version: 1.1
 category: Application
