--- a/templates/siemonster-project-projectname/0/docker-compose.yml
+++ b/templates/siemonster-project-projectname/0/docker-compose.yml
@@ -540,10 +540,8 @@ services:
       io.rancher.scheduler.affinity:host_label: capricorn=1
     tty: true
     stdin_open: true
-    environment:
-      ELASTICSEARCH_URL: http://elasticsearch:9200
     links:
-    - es-client:elasticsearch
+    - es-client-1:es-client
     image: ikuturso/siemonster-kibana
 
   minemeld:
