--- a/templates/siemonster-project-projectname/0/docker-compose.yml
+++ b/templates/siemonster-project-projectname/0/docker-compose.yml
@@ -16,7 +16,7 @@ services:
   msa:
     build: https://github.com/siemonster/project-free.git#master:containers/msa
     environment:
-      ADDITIONAL_PREPARE_COMMAND: 'echo ''db.getCollection("_sites").update({_id:"siemonster"}, {$$set: {names:["admin.${SITE_DNAME}","app.${SITE_DNAME}","${SITE_DNAME}"]}})'' | mongo mongo-sites; SITE_NAME=siemonster SITE_DOMAIN=${SITE_DNAME} node update-apps-links.js'
+      ADDITIONAL_PREPARE_COMMAND: 'echo ''db.getCollection("_sites").update({_id:"siemonster"}, {$$set: {names:["msa.${SITE_DNAME}","app.${SITE_DNAME}","admin.${SITE_DNAME}","${SITE_DNAME}"]}})'' | mongo mongo-sites; SITE_NAME=siemonster SITE_DOMAIN=${SITE_DNAME} node update-apps-links.js'
     stdin_open: true
     tty: true
     volumes_from:
@@ -35,6 +35,17 @@ services:
     labels:
       io.rancher.container.pull_image: always
       io.rancher.container.start_once: 'true'
+  
+  admin:
+    image: ikuturso/msa2
+    environment:
+      SITE_NAME: siemonster
+      MSA_URL: //msa.${SITE_DNAME}
+    stdin_open: true
+    tty: true
+    labels:
+      io.rancher.container.pull_image: always
+      io.rancher.container.hostname_override: container_name
 
   heaven-backend:
     image: extremeprog/heaven
@@ -57,7 +68,7 @@ services:
         }
 
         server {
-          server_name admin.*;
+          server_name msa.*;
           resolver 169.254.169.250 valid=1s;
           set $$hostpass "msa";
           location / {
@@ -69,7 +80,21 @@ services:
             proxy_set_header Connection "upgrade";
           }
         }
-
+        
+        server {
+          server_name admin.*;
+          resolver 169.254.169.250 valid=1s;
+          set $$hostpass "admin";
+          location / {
+            proxy_pass http://$$hostpass;
+            proxy_set_header Accept-Encoding "";
+            proxy_set_header Host $$host;
+            proxy_set_header X-Real-IP $$remote_addr;
+            proxy_set_header Upgrade $$http_upgrade;
+            proxy_set_header Connection "upgrade";
+          }
+        }
+        
         server {
           server_name 411.*;
           resolver 169.254.169.250 valid=1s;
