--- a/templates/siemonster-project-projectname/0/docker-compose.yml
+++ b/templates/siemonster-project-projectname/0/docker-compose.yml
@@ -37,7 +37,7 @@ services:
       io.rancher.container.start_once: 'true'
   
   admin:
-    image: ikuturso/msa2
+    image: ikuturso/msa-free
     environment:
       SITE_NAME: siemonster
       MSA_URL: //msa.${SITE_DNAME}
