--- a/templates/heaven/0/rancher-compose.yml
+++ b/templates/heaven/0/rancher-compose.yml
@@ -17,9 +17,9 @@
           server_name ~^(?<stack>[^.]+)\.[a-z0-9-]+\.[a-z0-9-]+\.[a-z]+$$;
           resolver 169.254.169.250;
           location / {
-            if ($$http_x_forwarded_proto != "https" ) {
-                return 301 https://$$host$$request_uri;
-            }
+          #  if ($$http_x_forwarded_proto != "https" ) {
+          #      return 301 https://$$host$$request_uri;
+          #  }
             proxy_pass http://heaven-backend.siemonster-project-$$stack;
             proxy_set_header Host $$host;
             proxy_set_header X-Real-IP $$remote_addr;
@@ -32,9 +32,9 @@
           server_name ~^(?<service>[^.]+)\.(?<stack>[^.]+)\.[a-z0-9-]+\.[a-z0-9-]+\.[a-z]+$$;
           resolver 169.254.169.250;
           location / {
-            if ($$http_x_forwarded_proto != "https" ) {
-                return 301 https://$$host$$request_uri;
-            }
+          #  if ($$http_x_forwarded_proto != "https" ) {
+           #     return 301 https://$$host$$request_uri;
+          #  }
             proxy_pass http://heaven-backend.siemonster-project-$$stack;
             proxy_set_header Host $$host;
             proxy_set_header X-Real-IP $$remote_addr;
