--- a/templates/siemonster-project-projectname/0/docker-compose.yml
+++ b/templates/siemonster-project-projectname/0/docker-compose.yml
@@ -54,7 +54,7 @@ services:
       SITE_DNAME: ${SITE_DNAME}
       ADDITIONAL_CONFIG: |
         server {
-          server_name {{`{{SITE_DNAME}}`}} app.* [a-z0-9-]+\.[a-z0-9-]+\.[a-z]+$$;
+          server_name {{SITE_DNAME}} app.* [a-z0-9-]+\.[a-z0-9-]+\.[a-z]+$$;
           resolver 169.254.169.250 valid=2s ipv6=off;
           set $$hostpass "siemonster";
           location / {
@@ -689,6 +689,7 @@ services:
     ports:
     - 3520:3520
     - 3521:3521
+    - 3522:3522
     - 3524:3524
     - 3525:3525
     - 3526:3526
