--- a/templates/siemonster-project-projectname/config.yml
+++ b/templates/siemonster-project-projectname/config.yml
@@ -1,4 +1,4 @@
 name: "SIEMonster Free App"
-description: "SIEMonster Security Information and Event Management (SIEM)."
+description: "Version 2.1.0 is only for Rancher Server 1.5x - SIEMonster Security Information and Event Management (SIEM)."
 version: "2.1.0"
 category: Application
