--- a/templates/siemonster-project-projectname/0/rancher-compose.yml
+++ b/templates/siemonster-project-projectname/0/rancher-compose.yml
@@ -1,5 +1,6 @@
 .catalog:
   version: "1.1.0"
+  maximum_rancher_version: v1.4.3
   questions:
     - variable: SITE_DNAME
       description: Specify the domain name of the site.
